--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,6 +1,17 @@
+:root {
+  --dark-blue: #264653;
+  --teal: #2A9D8F;
+  --yellow: #E9C46A;
+  --orange: #F4A261;
+  --dark-orange: #E76F51;
+}
 body {
-    font: 14px "Century Gothic", Futura, sans-serif;
+    font: 30px "Century Gothic", Futura, sans-serif;
     margin: 20px;
+    background-color: var(--teal);
+    text-transform: uppercase;
+    color: white;
+    font-family: 'Righteous', cursive;
   }
   
   ol, ul {
@@ -19,17 +30,25 @@ body {
   
   .square {
     background: #fff;
-    border: 1px solid #999;
+    font-family: 'Righteous', cursive;
+    border: 1px solid #fff;
     float: left;
-    font-size: 24px;
+    font-size: 50px;
     font-weight: bold;
-    line-height: 34px;
-    height: 34px;
+    line-height: 100px;
+    height: 100px;
     margin-right: -1px;
     margin-top: -1px;
     padding: 0;
     text-align: center;
-    width: 34px;
+    width: 100px;
+    border-radius: 50%;
+    color: var(--dark-blue);
+  }
+
+  .board {
+    background-color: var(--orange) !important;
+    padding: 10px;
   }
   
   .square:focus {
